# techcamp-django_ajaxapp_mac

./: pyproject.toml
config/: settings.py
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_content.py
static/js/: memo.js
templates/posts/: index.html
