[project]
name = "techcamp-django-ajaxapp-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2.21",
    "django-extensions>=4.1",
    "psycopg2-binary>=2.9.10"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
